k8s_on_aws/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: client
        image: moka12/multi-client
        ports:
        - containerPort: 3000
        resources:
          requests: # minimum guaranteed resources
            cpu: "250m" # m = millicores
            memory: "256Mi" 
          limits: # maximum allowed resources
            cpu: "500m"
            memory: "512Mi"
