k8s_on_aws/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes: # Define the volume that uses the PersistentVolumeClaim
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-pv-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data/pgdata # Set the default mount path for PostgreSQL data
          resources:
            requests: # minimum guaranteed resources
              cpu: "250m" # m = millicores
              memory: "256Mi" 
            limits: # maximum allowed resources
              cpu: "500m"
              memory: "512Mi"
