k8s_on_aws/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
        resources:
            requests: # minimum guaranteed resources
              cpu: "250m" # m = millicores
              memory: "256Mi" 
            limits: # maximum allowed resources
              cpu: "500m"
              memory: "512Mi"
