k8s_on_aws/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
      - name: server
        image: moka12/multi-server
        ports:
        - containerPort: 5000
        resources:
          requests: # minimum guaranteed resources
            cpu: "250m" # m = millicores
            memory: "256Mi" 
          limits: # maximum allowed resources
            cpu: "500m"
            memory: "512Mi"
