k8s_on_aws/client-cluster-IP-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
  - port: 3000
    targetPort: 3000
