k8s_on_aws/postgres-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
  - port: 5432
    targetPort: 5432
